--- a/index.ipynb
+++ b/index.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "<center><img src=\"https://github.com/DACSS-CSSmeths/guidelines/blob/main/pics/small_logo_ccs_meths.jpg?raw=true\" width=\"700\"/></center>\n",
     "\n",
+    "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/DACSS-CSSmeths-winter/optimization_MinMax/blob/main/index.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "_____\n",
     "<a id='home'></a>\n",
     "\n",
@@ -16,23 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9d0aaa04-57a9-4bbe-8527-ebec529c810d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe src=\"https://docs.google.com/presentation/d/e/2PACX-1vQd57TQqUwqnezWdbAKiCDilZqzYd6rkK0kLeh-wl17L-sc1aAZSnhQZ_Ad0eSO8435LBje7hZqu6Bq/embed?start=false&loop=false&delayms=3000\" frameborder=\"0\" width=\"960\" height=\"569\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<iframe src=\"https://docs.google.com/presentation/d/e/2PACX-1vQd57TQqUwqnezWdbAKiCDilZqzYd6rkK0kLeh-wl17L-sc1aAZSnhQZ_Ad0eSO8435LBje7hZqu6Bq/embed?start=false&loop=false&delayms=3000\" frameborder=\"0\" width=\"960\" height=\"569\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe>"
@@ -57,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2d2e3d99-7100-4941-aad8-57b178798e94",
    "metadata": {},
    "outputs": [],
@@ -68,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a105dc9b-d105-49d3-8093-96d03eca9530",
    "metadata": {},
    "outputs": [],
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4436e0c7",
    "metadata": {},
    "outputs": [],
@@ -105,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8533e838-9e02-4ca8-85ef-de557cb1dd7c",
    "metadata": {},
    "outputs": [],
@@ -131,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e676c256-353d-4fbd-a206-6914f29ff8ba",
    "metadata": {},
    "outputs": [],
@@ -151,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c24146f7-5db5-4606-90fd-9bc010685754",
    "metadata": {},
    "outputs": [],
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "44dd2783-49c1-44fd-952b-47743c9d4686",
    "metadata": {},
    "outputs": [],
@@ -202,39 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "636442d1-a48c-4a3a-a84d-9f2312f3d473",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to the CBC MILP Solver \n",
-      "Version: 2.10.3 \n",
-      "Build Date: Dec 15 2019 \n",
-      "\n",
-      "command line - /Users/JoseManuel/opt/anaconda3/envs/CSSmeth_3_10/lib/python3.10/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/2n/bkfhfqq16r78g3hf7pdj56y40000gn/T/b3d52a65f580420db376f7f2646d3af0-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /var/folders/2n/bkfhfqq16r78g3hf7pdj56y40000gn/T/b3d52a65f580420db376f7f2646d3af0-pulp.sol (default strategy 1)\n",
-      "At line 2 NAME          MODEL\n",
-      "At line 3 ROWS\n",
-      "At line 8 COLUMNS\n",
-      "At line 15 RHS\n",
-      "At line 19 BOUNDS\n",
-      "At line 20 ENDATA\n",
-      "Problem MODEL has 3 rows, 2 columns and 4 elements\n",
-      "Coin0008I MODEL read with 0 errors\n",
-      "Option for timeMode changed from cpu to elapsed\n",
-      "Presolve 0 (-3) rows, 0 (-2) columns and 0 (-4) elements\n",
-      "Empty problem - 0 rows, 0 columns and 0 elements\n",
-      "Optimal - objective value 16960000\n",
-      "After Postsolve, objective 16960000, infeasibilities - dual 0 (0), primal 0 (0)\n",
-      "Optimal objective 16960000 - 0 iterations time 0.002, Presolve 0.00\n",
-      "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.solve();"
    ]
@@ -251,21 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cb6125aa-53db-4fdf-8f11-8b2aaa8b347d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Model Status', 'Optimal')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"Model Status\",pp.LpStatus[model.status]"
    ]
@@ -280,23 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3a0152d1-cdd5-4426-9ba6-90556a685048",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Optimal Solution to maximize revenue': 16960000.0,\n",
-       " 'Gas': 6400000.0,\n",
-       " 'Oil': 3200000.0}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Results={\"Optimal Solution to maximize revenue\":pp.value(model.objective)}\n",
     "Results.update({v.name: v.varValue for v in model.variables()})\n",
@@ -305,63 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "651fadcc-cb30-4caa-98e4-f6215c0be7a9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>info</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Optimal Solution to maximize revenue</th>\n",
-       "      <td>16,960,000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gas</th>\n",
-       "      <td>6,400,000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Oil</th>\n",
-       "      <td>3,200,000.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               info\n",
-       "Optimal Solution to maximize revenue  16,960,000.00\n",
-       "Gas                                    6,400,000.00\n",
-       "Oil                                    3,200,000.00"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#or\n",
     "import pandas as pd\n",
@@ -386,73 +272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bfc1d779-df0d-42f7-b88c-e8935771110e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>shadow price</th>\n",
-       "      <th>slack</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>constraints</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>GAS</th>\n",
-       "      <td>-0.75</td>\n",
-       "      <td>-0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OIL</th>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-200,000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PRODUCTION</th>\n",
-       "      <td>2.65</td>\n",
-       "      <td>-0.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            shadow price        slack\n",
-       "constraints                          \n",
-       "GAS                -0.75        -0.00\n",
-       "OIL                -0.00  -200,000.00\n",
-       "PRODUCTION          2.65        -0.00"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sensitivityValues = [{'constraints':name, 'shadow price':c.pi, 'slack': c.slack} \n",
     "                     for name, c in model.constraints.items()]\n",
@@ -472,23 +295,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a7e1cb7a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe src=\"https://docs.google.com/presentation/d/e/2PACX-1vQBJJTGDErzhlqSfg-keAlqgtYkh1FyTvFZsr1CuvvohZ2gS8VjszmnXNrMML2zJcfygY0ISbbXH3ib/embed?start=false&loop=false&delayms=3000\" frameborder=\"0\" width=\"960\" height=\"569\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<iframe src=\"https://docs.google.com/presentation/d/e/2PACX-1vQBJJTGDErzhlqSfg-keAlqgtYkh1FyTvFZsr1CuvvohZ2gS8VjszmnXNrMML2zJcfygY0ISbbXH3ib/embed?start=false&loop=false&delayms=3000\" frameborder=\"0\" width=\"960\" height=\"569\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe>"
